@@ -186,7 +186,7 @@ list(REMOVE_DUPLICATES COMBINED_TARGETS)
 
 if((CMAKE_CXX_COMPILER_ID STREQUAL "Clang") OR (CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang") OR (CMAKE_CXX_COMPILER_ID STREQUAL "Intel"))
     message("Warning:")
-    message("Warning: Clang & Intel ICC compilers currently have incomplete implimentations of P1907R1.")
+    message("Warning: Clang & Intel compilers currently have incomplete implimentations of P1907R1.")
     message("Warning: csPLY_tpl & csCubeHelix_tpl require P1907R1 (floating point template arguments).")
     message("Warning: Examples that can't be built: color_lut_poly.cpp, color_lut_docs.cpp, color_lut_cubehelix.cpp, heart2022.cpp")
     message("Warning:")
@@ -220,7 +220,10 @@ if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
   message("Warning: MSVC compatible libraries only.  For example, trying to use the MSYS2 versions")
   message("Warning: of libTIFF or GTest will not work with MSVC.  If you don't have compatible ")
   message("Warning: versions, then simply disable the features using command line options like")
-  message("Warning: -DO_TIFF=NO and -DO_GTEST=NO.")
+  message("Warning: -DO_TIFF=NO and -DO_GTEST=NO.  Note that GTest may also be downloaded with")
+  message("Warning: the -DOWNLOAD_GMAKE=YES option.")
+  message("Warning:")
+  message("Warning: Use 'Release' builds with MSVC as 'Debug' builds produce painfully slow binaries.")
   message("Warning:")
 endif()
 
@@ -253,6 +256,7 @@ foreach(CURTGT IN LISTS COMBINED_TARGETS)
     target_compile_options(${CURTGT} PUBLIC -ffast-math)
     target_compile_options(${CURTGT} PUBLIC -Wall -Wconversion -Wno-unknown-pragmas -Wextra -Wno-deprecated-copy)
     target_compile_options(${CURTGT} PUBLIC -Ofast)
+    #target_compile_options(${CURTGT} PUBLIC -march=native)
     if(${CMAKE_CXX_COMPILER_VERSION} VERSION_LESS "11.0.0")
       target_compile_options(${CURTGT} PUBLIC -DMISSING_P0476R2=1)                                                     # missing bit_cast template parameters
       target_compile_options(${CURTGT} PUBLIC -DMISSING_P1907R1=1)                                                       # missing floating point template parameters
@@ -272,6 +276,12 @@ foreach(CURTGT IN LISTS COMBINED_TARGETS)
     target_compile_options(${CURTGT} PUBLIC -DMISSING_P1907R1=1)                                                       # missing floating point template parameters
   elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
     #message("Warning: MSVC support is currently experimental")
+  elseif(CMAKE_CXX_COMPILER_ID STREQUAL "NVHPC")
+    target_compile_options(${CURTGT} PUBLIC -O3)
+  elseif(CMAKE_CXX_COMPILER_ID STREQUAL "IntelLLVM")
+    target_compile_options(${CURTGT} PUBLIC -O3)
+  else()
+    message(WARNING " Unknown compiler: ${CMAKE_CXX_COMPILER_ID}")
   endif()
 
   target_link_libraries(${CURTGT} PRIVATE MRaster)
