@@ -715,3 +715,50 @@ Copyright \copy {{{time(%Y)}}} Mitch Richling. All rights reserved.
   | UNK      | statNumNonZeroPixels(intCrdT, intCrdT, intCrdT, intCrdT)                                                                                   |
   | UNK      | statNumNonZeroPixels()                                                                                                                     |
   |----------+--------------------------------------------------------------------------------------------------------------------------------------------|
+
+* Benchmarks
+
+The table below documents relative performance for many of the compilers in
+MRaster's CMakeLists.txt file.  These results have more to do with the
+optimization flags in CMakeLists.txt than the compilers themselves.  In
+particular, I have not yet properly investigated the best options for some of
+them.
+
+ |               |      Win 11 |    Win 11 |   Win 11 |    Win 11 |    Win 11 |     Win 11 |    Win 11 |
+ |               |        None |     MSYS2 |    MSYS2 |       WSL |       WSL |        WSL |       WSL |
+ |               |        None |   mingw64 |  clang64 | Debian 13 | Debian 13 |  Debian 13 | Debian 13 |
+ |               |        MSVC |       GCC |    clang |       GCC |     clang | Nvidia HPC |     Intel |
+ |               |        2022 |      14.2 |   19.1.6 |      14.2 |    19.1.6 |      24.11 |  2025.0.4 |
+ |---------------+-------------+-----------+----------+-----------+-----------+------------+-----------|
+ | DO_POINT      |     6.53615 |   1.16041 |  3.91633 |   1.53665 |   3.96686 |    4.36704 |   4.54133 |
+ | DO_RAMP_INT   |     7.85799 |   3.50965 |  4.11095 |   3.85396 |    4.1317 |    3.93723 |    4.3151 |
+ | DO_RAMP_CON   |     11.0127 |   3.66739 |  4.31167 |   4.03627 |    4.4743 |    3.99623 |   4.40933 |
+ | DO_RAMP       |     2.10154 |   1.50325 |  1.83407 |    1.6122 |   1.75118 |    1.59943 |    1.6581 |
+ | DO_POINT_NC   |     13.4165 |   2.28155 |  6.06335 |   2.77098 |    5.9332 |    5.55818 |   4.34644 |
+ | DO_INVERT     |      3.3287 |    1.0142 |  2.20701 |   2.86768 |   2.05454 |    2.11047 |   2.15934 |
+ | DO_COL_SETC   |     3.35453 |   2.74563 |   2.8803 |   2.84977 |   2.82105 |    2.83644 |    2.8007 |
+ | DO_COL_SET    |     3.28106 |   2.61673 |  2.83776 |   2.81051 |   2.78699 |    2.80611 |   2.81984 |
+ | DO_UNPACK     |     2.26841 |   1.07605 | 0.974374 |  0.893464 |  0.973594 |   0.959723 |   1.04806 |
+ | DO_MINI       |     5.26084 |   1.31318 |   3.2752 |   1.31602 |   2.36521 |    2.54208 |   2.50835 |
+ | DO_CLR_BLK    |     2.15401 |  0.214339 |  2.12971 |  0.179747 |   2.10512 |    1.30301 |   1.99873 |
+ | DO_CLR        |     2.21498 |   1.14022 |  2.13275 |   1.21307 |   2.12331 |    1.73022 |   1.99392 |
+ | DO_CLIP_LINE  |     2.05694 |   1.88974 |  1.99765 |   2.02308 |   2.01453 |    1.99144 |   2.04597 |
+ | DO_LINE       |      2.0468 |   1.93401 |  2.06664 |   2.09723 |   2.02833 |    1.97552 |   2.02574 |
+ | DO_FFBTRI     |     2.42764 |   2.41121 |  3.03131 |    2.6241 |   3.02479 |    1.81501 |   1.68632 |
+ | DO_FFTRI      |    0.737072 |  0.720333 | 0.684669 |  0.739511 |   0.68407 |   0.805223 |  0.611703 |
+ | DO_FGBTRI     |    0.961701 |  0.932356 |  1.17904 |   1.02907 |   1.16185 |   0.723988 |  0.673763 |
+ | DO_FGTRI      |     1.18724 |   1.15488 |  1.07637 |   1.18384 |   1.07952 |    1.26583 |  0.979763 |
+ | DO_CIRCLE     |     1.34633 |   1.26188 |  1.32544 |   1.30988 |   1.34234 |     1.2894 |   1.32116 |
+ | DO_RECT       |     6.24435 |   3.07024 |  5.69571 |   3.28352 |   5.74606 |    6.64956 |   5.15649 |
+ | DO_HLINE_NC   |     4.67235 |   2.27476 |  3.55698 |   2.43002 |    3.5683 |    3.46774 |   3.73878 |
+ | DO_HLINE      |     1.13803 |   1.11777 |   1.0613 |   1.18159 |   1.03872 |    1.21084 |  0.950016 |
+ | DO_VLINE      |      3.2278 |    3.1484 |  3.25418 |   3.21653 |   3.19222 |    3.09765 |   3.25258 |
+ | DO_VLINE_NC   |     3.23212 |   3.13704 |  3.25143 |   3.23338 |   3.17418 |    3.16034 |    3.1911 |
+ | DO_45LINE     |     4.34352 |   4.18626 |  4.42487 |   4.44813 |   4.44067 |    4.28109 |   4.40878 |
+ | DO_TRIVLN     |   0.0734812 | 0.0604772 | 0.051004 | 0.0687492 | 0.0505404 |  0.0680999 | 0.0567434 |
+ | DO_INTRP_AVG9 |     5.69497 |   2.14982 |  3.46422 |   2.21124 |   3.24272 |    3.40699 |   3.56063 |
+ | DO_INTRP_BILN |     2.05904 |   1.82594 |  1.47617 |   1.97975 |   1.67179 |    1.32919 |   1.32933 |
+ | DO_CONV       |     7.72129 |   4.02767 |  4.54388 |   4.65024 |   4.58352 |    4.74323 |     4.908 |
+ |---------------+-------------+-----------+----------+-----------+-----------+------------+-----------|
+ | Total         |         112 |   57.5576 |  78.8531 |   63.6691 |   77.5526 |    75.0783 |   74.5258 |
+
