@@ -37,38 +37,38 @@
 #include "ramCanvas.hpp"
 
 //--------------------------------------------------------------------------------------------------------------------------------------------------------------
-#define DO_POINT      0
-#define DO_POINT_NC   0
-#define DO_RAMP       0
-#define DO_RAMP_INT   0
-#define DO_RAMP_CON   0
-#define DO_INVERT     0
-#define DO_COL_SET    0
-#define DO_COL_SETC   0
-#define DO_UNPACK     0
-#define DO_MINI       0
-#define DO_CLR_BLK    0
-#define DO_CLR        0
-#define DO_FFBTRI     0
-#define DO_FFTRI      0
-#define DO_FGBTRI     0
-#define DO_FGTRI      0
+#define DO_POINT      1
+#define DO_POINT_NC   1
+#define DO_RAMP       1
+#define DO_RAMP_INT   1
+#define DO_RAMP_CON   1
+#define DO_INVERT     1
+#define DO_COL_SET    1
+#define DO_COL_SETC   1
+#define DO_UNPACK     1
+#define DO_MINI       1
+#define DO_CLR_BLK    1
+#define DO_CLR        1
+#define DO_FFBTRI     1
+#define DO_FFTRI      1
+#define DO_FGBTRI     1
+#define DO_FGTRI      1
 #define DO_CIRCLE     1
-#define DO_RECT       0
-#define DO_LINE       0
-#define DO_CLIP_LINE  0
-#define DO_HLINE_NC   0
-#define DO_HLINE      0
-#define DO_VLINE_NC   0
-#define DO_VLINE      0
-#define DO_45LINE     0
-#define DO_TRIVLN     0
-#define DO_INTRP_AVG9 0
-#define DO_INTRP_BILN 0
-#define DO_CONV       0
-#define DO_CS_CONV    0
+#define DO_RECT       1
+#define DO_LINE       1
+#define DO_CLIP_LINE  1
+#define DO_HLINE_NC   1
+#define DO_HLINE      1
+#define DO_VLINE_NC   1
+#define DO_VLINE      1
+#define DO_45LINE     1
+#define DO_TRIVLN     1
+#define DO_INTRP_AVG9 1
+#define DO_INTRP_BILN 1
+#define DO_CONV       1
+#define DO_CS_CONV    1
 
-#define DO_OUT_TIF   1
+#define DO_OUT_TIF   0
 #define DO_OUT_RAW   0
 
 #define REPS  1
